<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/plus"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="10dp"
        android:text="@string/plus"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/minus" />

    <Button
        android:id="@+id/multi"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="10dp"
        android:text="@string/multi"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/slash" />

    <Button
        android:id="@+id/minus"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="10dp"
        android:text="@string/minus"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/multi" />

    <Button
        android:id="@+id/num0"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:text="@string/num0"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/num1" />

    <Button
        android:id="@+id/period"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:text="@string/period"
        android:textSize="30sp"
        app:layout_constraintStart_toEndOf="@+id/num0"
        app:layout_constraintTop_toBottomOf="@+id/num2" />

    <Button
        android:id="@+id/equal"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="10dp"
        android:text="@string/equal"
        android:textSize="30sp"
        app:layout_constraintEnd_toStartOf="@+id/plus"
        app:layout_constraintTop_toBottomOf="@+id/num3" />

    <Button
        android:id="@+id/num1"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:text="@string/num1"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/num4" />

    <Button
        android:id="@+id/num2"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:text="@string/num2"
        android:textSize="30sp"
        app:layout_constraintStart_toEndOf="@+id/num1"
        app:layout_constraintTop_toBottomOf="@+id/num5" />

    <Button
        android:id="@+id/num3"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="10dp"
        android:text="@string/num3"
        android:textSize="30sp"
        app:layout_constraintEnd_toStartOf="@+id/minus"
        app:layout_constraintTop_toBottomOf="@+id/num6" />

    <Button
        android:id="@+id/num4"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:text="@string/num4"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/num7" />

    <Button
        android:id="@+id/num5"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:text="@string/num5"
        android:textSize="30sp"
        app:layout_constraintStart_toEndOf="@+id/num4"
        app:layout_constraintTop_toBottomOf="@+id/num8" />

    <Button
        android:id="@+id/num6"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="10dp"
        android:text="@string/num6"
        android:textSize="30sp"
        app:layout_constraintEnd_toStartOf="@+id/multi"
        app:layout_constraintTop_toBottomOf="@+id/num9" />

    <Button
        android:id="@+id/num7"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:text="@string/num7"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/percent" />

    <Button
        android:id="@+id/num9"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="10dp"
        android:text="@string/num9"
        android:textSize="30sp"
        app:layout_constraintEnd_toStartOf="@+id/slash"
        app:layout_constraintTop_toBottomOf="@+id/taxon" />

    <Button
        android:id="@+id/num8"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:text="@string/num8"
        android:textSize="30sp"
        app:layout_constraintStart_toEndOf="@+id/num7"
        app:layout_constraintTop_toBottomOf="@+id/taxoff" />

    <Button
        android:id="@+id/slash"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="10dp"
        android:text="@string/slash"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ac" />

    <Button
        android:id="@+id/percent"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:text="@string/percent"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/resultArea" />

    <TextView
        android:id="@+id/resultArea"
        android:layout_width="400dp"
        android:layout_height="100dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:textAlignment="viewEnd"
        android:textSize="60sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/ac"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="10dp"
        android:text="@string/ac"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/resultArea" />

    <Button
        android:id="@+id/taxon"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="10dp"
        android:text="@string/taxon"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/ac"
        app:layout_constraintTop_toBottomOf="@+id/resultArea" />

    <Button
        android:id="@+id/taxoff"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:text="@string/taxoff"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/percent"
        app:layout_constraintTop_toBottomOf="@+id/resultArea" />

</androidx.constraintlayout.widget.ConstraintLayout>